unpackaged/main/default/objects/project_cloud__Project_Milestone__c/project_cloud__Project_Milestone__c.object-meta.xml
<CustomObject>
    <label>Project Milestone</label>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>