unpackaged/main/default/objects/project_cloud__Project_Milestone__c/fields/project_cloud__Complete__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the Milestone is complete</description>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>