unpackaged/main/default/objects/project_cloud__Project_Milestone__c/fields/project_cloud__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Date__c</fullName>
    <description>The date the Milestone was completed</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>