unpackaged/main/default/objects/project_cloud__Project_Milestone__c/fields/project_cloud__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Due_Date__c</fullName>
    <description>The expected date for the Milestone to be complete on the project</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>