unpackaged/main/default/objects/project_cloud__Project_Milestone__c/fields/project_cloud__Milestone_Performance__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Milestone_Performance__c</fullName>
    <description>How many days early or late the Milestone was completed (minus numbers indicate early completion)</description>
    <formula>project_cloud__Completed_Date__c - project_cloud__Due_Date__c</formula>
    <label>Milestone Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>