unpackaged/main/default/objects/project_cloud__Project_Milestone__c/fields/project_cloud__Milestone_Process_Step__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Milestone_Process_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Milestone Process Step</label>
    <referenceTo>project_cloud__Milestone_Process_Step__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>Project_Milestones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>