unpackaged/main/default/objects/project_cloud__Project_Milestone__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>Project_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>