unpackaged/main/default/objects/project_cloud__Project_Milestone__c/fields/project_cloud__Related_Record_Control__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Related_Record_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when completion of the Milestone is controlled by the related ‘Timeline’ records (Phases, Sprints, Tasks or Cards)</description>
    <label>Related Record Control</label>
    <type>Checkbox</type>
</CustomField>